--- a/viz/package.json
+++ b/viz/package.json
@@ -6,14 +6,21 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/chart.js": "^2.9.37",
+    "@types/google-protobuf": "^3.15.6",
     "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.61",
-    "@types/react": "^18.2.37",
-    "@types/react-dom": "^18.2.14",
-    "protoc-gen-ts": "^0.8.7",
+    "@types/node": "^16.18.38",
+    "@types/react": "^18.2.15",
+    "@types/react-dom": "^18.2.7",
+    "buffer": "^6.0.3",
+    "chart.js": "^4.3.0",
+    "chartjs-plugin-zoom": "^2.0.1",
+    "google-protobuf": "^3.21.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^3.0.1",
+    "tailwindcss": "^3.3.3",
+    "ts-proto": "^1.156.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -40,5 +47,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@types/testing-library__react": "^10.2.0",
+    "protoc-gen-ts": "^0.8.6"
   }
 }
