--- a/viz/package.json
+++ b/viz/package.json
@@ -18,7 +18,7 @@
     "google-protobuf": "^3.21.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "^3.0.1",
+    "react-scripts": "5.0.1",
     "tailwindcss": "^3.3.3",
     "ts-proto": "^1.156.0",
     "typescript": "^4.9.5",
@@ -50,7 +50,6 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@types/testing-library__react": "^10.2.0",
     "protoc-gen-ts": "^0.8.6"
   }
 }
